--- a/NoteApp/Views/Shared/_Footer.cshtml
+++ b/NoteApp/Views/Shared/_Footer.cshtml
@@ -4,18 +4,12 @@
         <div class="row">
             <!-- BEGIN COPYRIGHT -->
             <div class="col-md-4 col-sm-4 padding-top-10">
-                2022 © Tublid õpilased. ALL Rights Reserved.
+                2022 © NoteApp. ALL Rights Reserved.
             </div>
             <!-- END COPYRIGHT -->
             <!-- BEGIN PAYMENTS -->
             <div class="col-md-4 col-sm-4">
-                <ul class="list-unstyled list-inline pull-right">
-                    <li><img src="~/assets/corporate/img/payments/western-union.jpg" alt="We accept Western Union" title="We accept Western Union"></li>
-                    <li><img src="~/assets/corporate/img/payments/american-express.jpg" alt="We accept American Express" title="We accept American Express"></li>
-                    <li><img src="~/assets/corporate/img/payments/MasterCard.jpg" alt="We accept MasterCard" title="We accept MasterCard"></li>
-                    <li><img src="~/assets/corporate/img/payments/PayPal.jpg" alt="We accept PayPal" title="We accept PayPal"></li>
-                    <li><img src="~/assets/corporate/img/payments/visa.jpg" alt="We accept Visa" title="We accept Visa"></li>
-                </ul>
+                
             </div>
             <!-- END PAYMENTS -->
             <!-- BEGIN POWERED -->
