--- a/NoteApp/Views/Shared/_Header.cshtml
+++ b/NoteApp/Views/Shared/_Header.cshtml
@@ -22,6 +22,8 @@
                 <li>
                     <a asp-controller="Home" asp-action="Privacy">Privacy</a>
                 </li>
+                 <partial name="_LoginPartial" />
+                
 
                 <!-- BEGIN TOP SEARCH -->
                 <!--<li class="menu-search">
