--- a/NoteApp/Views/Shared/_Layout.cshtml
+++ b/NoteApp/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
         </div>
     </div>
 
-    <partial name="_Footer" />
+   <!-- <partial name="_Footer" />-->
 
     <!-- Load javascripts at bottom, this will reduce page load time -->
     <!-- BEGIN CORE PLUGINS (REQUIRED FOR ALL PAGES) -->
