Changed app navbar layout

--- a/NoteApp/Views/Shared/_Header.cshtml
+++ b/NoteApp/Views/Shared/_Header.cshtml
@@ -1,7 +1,7 @@
 ﻿<!-- BEGIN HEADER -->
 <div class="header">
     <div class="container">
-        <a class="site-logo" asp-controller="Home"><img src="~/assets/corporate/img/logos/logo-red.png" alt="Metronic Shop UI"></a>
+        <a class="site-logo" asp-controller="Home">NoteApp</a>
 
         <a href="javascript:void(0);" class="mobi-toggler"><i class="fa fa-bars"></i></a>
 
@@ -10,18 +10,6 @@
         <!-- BEGIN NAVIGATION -->
         <div class="header-navigation">
             <ul>
-                <li>
-                    <a asp-controller="Home" asp-action="Index">Home</a>
-                </li>
-                <li>
-                    <a asp-controller="Dashboard" asp-action="Index">Notes</a>
-                </li>
-                <li>
-                    <a asp-controller="Dashboard" asp-action="Note">Note</a>
-                </li>
-                <li>
-                    <a asp-controller="Home" asp-action="Privacy">Privacy</a>
-                </li>
                  <partial name="_LoginPartial" />
                 
 
