--- a/NoteApp/Views/Shared/_Layout.cshtml
+++ b/NoteApp/Views/Shared/_Layout.cshtml
@@ -59,10 +59,10 @@
                 <li class="active">Cool green dress with red bell</li>
             </ul>*@
             <div class="row margin-bottom-40">
-                <partial name="_SideBar" />
+               <!-- <partial name="_SideBar" />-->
 
                 <!-- BEGIN CONTENT -->
-                <div class="col-md-9 col-sm-7">
+                <div class="col-md-12">
                     @RenderBody()
                 </div>
                 <!-- END CONTENT -->
