--- a/NoteApp/wwwroot/assets/corporate/css/style.css
+++ b/NoteApp/wwwroot/assets/corporate/css/style.css
@@ -486,7 +486,7 @@ body.page-header-fixed {
 	font: 15px "Open Sans", sans-serif;
 	margin: 0 10px 0 0;
 	padding: 0;
-	float: left;
+	float: right;
 	text-transform: uppercase;
 }
 .header-navigation ul {
