--- a/NoteApp/Views/Shared/_LoginPartial.cshtml
+++ b/NoteApp/Views/Shared/_LoginPartial.cshtml
@@ -4,21 +4,38 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+    <li>
+        <a asp-controller="Dashboard" asp-action="Index">Notes</a>
     </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
+   
+    <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+            @User.Identity.Name
+        </a>
+
+        <!-- BEGIN DROPDOWN MENU -->
+    <ul class="dropdown-menu">
+            <li><a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Profile</a></li>
+            <li class="nav-item">
+                <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                    <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                </form>
+            </li>
+        </ul>
+        <!-- END DROPDOWN MENU -->
     </li>
+
 }
 else
 {
+    <li>
+        <a asp-controller="Home" asp-action="Index">Home</a>
+    </li>
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
+
 }
