--- a/NoteApp/Views/Dashboard/Index.cshtml
+++ b/NoteApp/Views/Dashboard/Index.cshtml
@@ -2,7 +2,16 @@
     ViewData["Title"] = "Authorized note view";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Testing notes page</p>
+<h1 class="display-4">Welcome</h1>
+<p>Testing notes page</p>
+<button style="margin:1em; margin-left:0" class="btn btn-default">New Note</button>
+ <div class="row product-list">
+    <partial name="_Item" /> 
+    <partial name="_Item" /> 
+    <partial name="_Item" /> 
+    <partial name="_Item" /> 
+    <partial name="_Item" /> 
+    <partial name="_Item" /> 
+    <partial name="_Item" /> 
+    <partial name="_Item" /> 
 </div>
