--- a/NoteApp/Views/Dashboard/Index.cshtml
+++ b/NoteApp/Views/Dashboard/Index.cshtml
@@ -1,26 +1,30 @@
-﻿@{
+﻿@model NoteApp.Models.Dashboard.IndexModel
+@{
     ViewData["Title"] = "Authorized note view";
 }
 
 <partial name="_Modal" />
 <button id="add-new-note" style="margin:1em; margin-left:0" class="btn btn-default">New Note</button>
- <div class="row product-list">
-    <partial name="_Item" /> 
-    <partial name="_Item" /> 
-    <partial name="_Item" /> 
-    <partial name="_Item" /> 
-    <partial name="_Item" /> 
-    <partial name="_Item" /> 
-    <partial name="_Item" /> 
-    <partial name="_Item" /> 
+<div class="row product-list">
+    @if (Model.UserNotes.Count != 0)
+    {
+        @foreach (var note in Model.UserNotes)
+        {
+            <partial name="_Item" />
+        }
+    }
+    else
+    {
+        <p>Notes does not exist</p>
+    }
 </div>
 
 @section Scripts
 {
-    <script>
+<script>
     $("#add-new-note").click(function(){
         $("#newNote-modal").modal('show');
         console.log("Testing");
     })
-    </script>
+</script>
 }
