--- a/NoteApp/Areas/Identity/Pages/Account/Login.cshtml
+++ b/NoteApp/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,24 +5,23 @@
     ViewData["Title"] = "Log in";
 }
 
-<div class="row">
-    <div style="width:70vh; margin-left:auto;margin-right:auto;">
+<div class="d-flex justify-content-center" style="height:100vh">
+    <div style="width:70vh;padding-left:1.5em;padding-right:1.5em;padding-top:1.5em" class="align-self-center shadow rounded">
         <h2> @ViewData["Title"]</h2>
         <form id="account" method="post">
-           <!-- <h4>Use a local account to log in.</h4>-->
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group mb-2">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-2">
                 <label asp-for="Input.Password"></label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-2">
                 <div class="checkbox">
                     <label asp-for="Input.RememberMe">
                         <input asp-for="Input.RememberMe" />
@@ -34,49 +33,12 @@
                 <button type="submit" class="btn btn-primary">Log in</button>
             </div>
             <div class="form-group">
-                <p>
-               <!--<a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>-->
-                </p>
-                <p>
-                    <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                </p>
-                <p>
-                   <!--<a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>-->
-                </p>
+                <div class="p-2" style="text-align:right">
+                    <a class="text-decoration-none" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                </div>
             </div>
         </form>
     </div>
-    <!-- <div class="col-md-6 col-md-offset-2">
-         <section>
-             <h4>Use another service to log in.</h4>
-             <hr />
-    @{
-        if ((Model.ExternalLogins?.Count ?? 0) == 0)
-        {
-                             <div>
-                                 <p>
-                                     There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                                     for details on setting up this ASP.NET application to support logging in via external services.
-                                 </p>
-                             </div>
-        }
-        else
-        {
-                             <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                                 <div>
-                                     <p>
-                        @foreach (var provider in Model.ExternalLogins)
-                        {
-                                                 <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                        }
-                                     </p>
-                                 </div>
-                             </form>
-        }
-    }
-         </section>
-         -->
-</div>
 </div>
 
 @section Scripts {
