--- a/NoteApp/wwwroot/css/site.css
+++ b/NoteApp/wwwroot/css/site.css
@@ -1,18 +1,34 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+}
+
+.sidebar {
+    height: 100%;
+}
+
+.sidebar-container {
+    flex-wrap: nowrap
+}
+
+@media only screen and (max-width: 576px) {
+    .sidebar {
+        height: 10%;
+    }
+    .sidebar-container {
+        flex-wrap: wrap 
+    }
 }
