--- a/NoteApp/Views/Dashboard/Edit.cshtml
+++ b/NoteApp/Views/Dashboard/Edit.cshtml
@@ -2,11 +2,12 @@
 
 @{
     ViewBag.Popup = true;
-    ViewBag.Title = "Create a new note";
 }
 <form asp-action="Edit" asp-controller="Dashboard" method="post">
-    <h4 class="m-0">@ViewBag.Title</h4>
-    <hr />
-        @Html.EditorFor(x=>x.NoteTitle)
-        <button type="submit" class="btn btn-primary">Save changes</button>
+    <div class="mb-3 form-group ">
+        @Html.DisplayFor(x=>x.NoteTitle)
+        @Html.EditorFor(x=>x.NoteTitle,new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model =>model.NoteTitle, "", new { @class = "text-danger" })
+    </div>
+    <button type="submit" class="btn btn-primary">Save changes</button>
 </form>
