--- a/NoteApp/Views/Dashboard/Note.cshtml
+++ b/NoteApp/Views/Dashboard/Note.cshtml
@@ -2,26 +2,43 @@
 @{
     ViewData["Title"] = "Note View";
 }
-@Html.HiddenFor(x=>x.Note)
-@Html.HiddenFor(x=>x.NoteId)
 
-<div class="text-center" style="height:80vh">
-   <textarea id="mytextarea">@Model.Note.Content</textarea>
-</div>
+<form asp-controller="Dashboard" asp-action="Note" id="noteEditForm" autocomplete="off" data-ajax="true" data-ajax-method="POST" data-ajax-update="#noteEditForm" data-ajax-success="NoteFormEvents" data-ajax-mode="replace-with">
+    @Html.HiddenFor(x=>x.Id)
+    <div class="text-center" style="height:80vh">
+        <textarea asp-for="Content" id="mytextarea">@Model.Content</textarea>
+    </div>
+    <br />
+    <div style="float:right">
+        <button type="submit" class="btn btn-primary">Save</button>
+    </div>
+</form>
 
+<script src="~/lib/tinymce/tinymce.min.js" referrerpolicy="origin"></script>
 @section Scripts{
-    <script>
-      tinymce.init({
-        selector: '#mytextarea',
-        plugins: 'preview importcss searchreplace autolink autosave save directionality code visualblocks visualchars fullscreen image link media template codesample table charmap pagebreak nonbreaking anchor insertdatetime advlist lists wordcount charmap quickbars emoticons',
-        editimage_cors_hosts: ['picsum.photos'],
-        menubar: 'file edit view insert format tools table help',
-        toolbar: 'undo redo | bold italic underline strikethrough | fontfamily fontsize blocks | alignleft aligncenter alignright alignjustify | outdent indent |  numlist bullist | forecolor backcolor removeformat | pagebreak | charmap emoticons | fullscreen  preview  print | insertfile image media template link anchor codesample | ltr rtl',
-        branding: false,
-        resize: false,
-        promotion: false,
-        height:"100%"
-      });
+
+    <script type="text/javascript">
+
+        $(function () {
+                NoteFormEvents();
+
+        });
+
+        function NoteFormEvents() {
+            tinymce.init({
+                selector: '#mytextarea',
+                plugins: 'preview importcss searchreplace autolink autosave save directionality code visualblocks visualchars fullscreen image link media template codesample table charmap pagebreak nonbreaking anchor insertdatetime advlist lists wordcount charmap quickbars emoticons',
+                editimage_cors_hosts: ['picsum.photos'],
+                menubar: 'file edit view insert format tools table help',
+                toolbar: 'undo redo | bold italic underline strikethrough | fontfamily fontsize blocks | alignleft aligncenter alignright alignjustify | outdent indent |  numlist bullist | forecolor backcolor removeformat | pagebreak | charmap emoticons | fullscreen  preview  print | insertfile image media template link anchor codesample | ltr rtl',
+                branding: false,
+                resize: false,
+                menubar: false,
+                promotion: false,
+                height: "100%"
+            });
+        }
+
 
     </script>
 }
