--- a/NoteApp/Views/Shared/_Header.cshtml
+++ b/NoteApp/Views/Shared/_Header.cshtml
@@ -24,8 +24,8 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">@UserManager.GetUserName(User)</a>
 
                     <div class="dropdown-menu dropdown-menu-end">
-                        <a href="#" class="dropdown-item">Reports</a>
-                        <a href="#" class="dropdown-item">Settings</a>
+                      @*  <a href="#" class="dropdown-item">Reports</a>
+                        <a href="#" class="dropdown-item">Settings</a>*@
                         <div class="dropdown-divider"></div>
                         <a href="#" id="logout" class="dropdown-item">Logout</a>
                     </div>
